--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,12 +1,26 @@
 .footer {
-    height: 100px;
     background-color: #008B8B;
-    display: flex;
-    align-items: end;
-    justify-content: end;
-}
-
-.footer-img {
-    width: 45px;
-    height: 40px;
-}
+    color: #fff; /* Set text color to white */
+    padding: 20px;
+  }
+  
+  .footer strong {
+    font-weight: bold;
+  }
+  
+  .footer b {
+    font-weight: bold;
+  }
+  
+  .footer a {
+    color: #fff; /* Set link color to white */
+    text-decoration: none;
+  }
+  
+  .footer-img {
+    width: 24px;
+    height: 24px;
+    margin-left: 5px;
+    vertical-align: middle;
+  }
+  
