--- a/src/components/tours/Tours.css
+++ b/src/components/tours/Tours.css
@@ -1,8 +1,10 @@
 img {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
 }
 
 .tourClass {
     display: flex;
+    flex-wrap: wrap;
+    
 }
